Fix 'flickering' when file items are too long in the picker.

--- a/web/client/styles/main.css
+++ b/web/client/styles/main.css
@@ -1459,8 +1459,6 @@ div.item {
 div.item:hover {
   background-color: Gainsboro;
   cursor: pointer;
-  overflow-x: visible;
-  width: auto;  
 }
 
 div.item.disabled {
